--- a/code/client/mixc_0.0.1/index.html
+++ b/code/client/mixc_0.0.1/index.html
@@ -79,7 +79,7 @@
 					<div class="row">
 						<div class="col city">深圳</div>
 						<div class="col time">{{ hour }}:{{ minutes }}</div>
-						<div class="col build align-right">名称中心</div>
+						<div class="col build align-right">名城中心</div>
 					</div>
 					<h5>{{ year }}-{{ month }}-{{ date }} 星期{{ week }}</h5>
 				</div>
