--- a/code/web/index.html
+++ b/code/web/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>mixc</title>
+    <meta charset="utf-8"/>
+    <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon"/>
+    <title>商场导购平台</title>
   </head>
   <body>
     <div id="app"></div>
