--- a/code/client/mixc_0.0.1/index.html
+++ b/code/client/mixc_0.0.1/index.html
@@ -277,6 +277,7 @@
 		<script src="lib/swiper/idangerous.swiper.min.js"></script>
 		<script src="lib/jquery/jquery-3.1.1.min.js"></script>
 		<script src="js/main.js"></script>
+		<script src="js/setting.js"></script>
 		<script src="js/ads.js"></script>
 		<script src="js/setting.js"></script>
 	</body>
