--- a/code/client/start.html
+++ b/code/client/start.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>商场导购平台</title>
+		<title>导航平台</title>
 		<style>
 			body, html {
 				margin: 0;
@@ -37,7 +37,7 @@
 	</head>
 	<body style="background-image">
 		<div class="center">
-			<h1>商场导航软件</h1>
+			<h1>导航平台</h1>
 			<h5 id="msg">启动中...</h5>
 		</div>
 		<script type="text/javascript" src="js/checkversion.js" ></script>
