--- a/code/web/index.html
+++ b/code/web/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon"/>
-    <title>商场导购平台</title>
+    <title>导航平台</title>
   </head>
   <body>
     <div id="app"></div>
