--- a/code/client/start.html
+++ b/code/client/start.html
@@ -26,7 +26,7 @@
 				text-align: center;
 				position: absolute;
 				top: 50%;
-				transform: translateY(60px);
+				transform: translateY(1.6em);
 				text-shadow: 0px 0px 5px #000000;
 			}
 			
@@ -35,7 +35,7 @@
 			}
 			
 			.loading{
-				position:absolute;margin:auto;top:0;bottom:0;left:0;right:0;width:6.250em;height:6.250em;
+				position:absolute;margin:auto;top:0;bottom:0;left:0;right:0;width:3.00em;height:3.00em;
 				
 				-webkit-animation:rotate 2.4s linear infinite;
 				-moz-animation:rotate 2.4s linear infinite;
@@ -51,7 +51,7 @@
 				animation:flash 2.4s linear infinite;
 			}
 			.loading .dot {
-				position:absolute;margin:auto;width:2.4em;height:2.4em;border-radius:100%;
+				position:absolute;margin:auto;width:1.2em;height:1.2em;border-radius:100%;
 				
 				-webkit-transition:all 1s ease;
 				-moz-transition:all 1s ease;
@@ -98,27 +98,27 @@
 					transform:rotate( 0 );
 				}
 				10% {
-					width:6.250em;
-					height:6.250em;
+					width:3.00em;
+					height:3.00em;
 				}
 				66% {
-					width:2.4em;
-					height:2.4em;
+					width:1.2em;
+					height:1.2em;
 				}
 				100% {
 					-webkit-transform:rotate(360deg);
 					-moz-transform:rotate(360deg);
 					-o-transform:rotate(360deg);
 					transform:rotate(360deg);
-					width:6.250em;
-					height:6.250em;
+					width:3.00em;
+					height:3.00em;
 				}
 			}
 			
 			@keyframes dotsY {
 				66% {
 					opacity:.1;
-					width:2.4em;
+					width:1.2em;
 				}
 				77% {
 					opacity:1;
@@ -129,7 +129,7 @@
 			@keyframes dotsX {
 				66% {
 					opacity:.1;
-					height:2.4em;
+					height:1.2em;
 				}
 				77% {
 					opacity:1;
