--- a/code/client/mixc_0.0.1/index.html
+++ b/code/client/mixc_0.0.1/index.html
@@ -36,6 +36,7 @@
 			<transition name="bounce" mode="out-in">
 				<router-view></router-view>
 			</transition>
+			<mixc-config></mixc-config>
 		</div>
 
 		<!-- 1 home: 首页模版－开始 -->
@@ -277,14 +278,104 @@
 		</script>
 		<!-- 6.article: 文章系统-结束 -->
 		
+		<!-- 7.modal: 模态窗口开始 -->
+		<script type="text/x-template" id="modal-template">
+		  <transition name="modal">
+		    <div class="modal-mask">
+		      <div class="modal-wrapper">
+		        <div class="modal-container">
+		
+		          <div class="modal-header">
+		            <slot name="header">
+		              default header
+		            </slot>
+		          </div>
+		
+		          <div class="modal-body">
+		            <slot name="body">
+		              default body
+		            </slot>
+		          </div>
+		
+		          <div class="modal-footer">
+		            <slot name="footer">
+		              default footer
+		              <button class="modal-default-button" @click="$emit('close')">
+		                OK
+		              </button>
+		            </slot>
+		          </div>
+		        </div>
+		      </div>
+		    </div>
+		  </transition>
+		</script>
+		<!-- 7.modal: 模态窗口结束 -->
+		
+		<!-- 8.password: 密码开始 -->
+		<script type="text/x-template" id="password-template">
+			<mixc-modal @close="$emit('close')" class="password">
+			    <h3 slot="header">{{ title }}</h3>
+			    <h3 slot="body">
+			    		<ul ref="input" class="input">
+			    			<li class="num" v-for="n in 4" :class="{ active: n <= index }"></li>
+			    		</ul>
+			    		<ul class="keyboard">
+			    			<li class="key" v-for="n in 9" @click="handleKeyUp(n)">{{n}}</li>
+			    			<li class="key" @click="handleKeyUp(0)">0</li>
+			    			<li class="key key-back" @click="handleKeyUp(-1)">{{ index == 0 ? '取消' : '删除' }}</li>
+			    		</li>
+			    </h3>
+			    <span slot="footer">
+			    </span>
+		  	</mixc-modal>
+		</script>	
+		<!-- 8.password: 密码结束 -->
+		
+		<!-- 9.config: 左上角设置开始 -->
+		<script type="text/x-template" id="config-template">
+			<div class="config">
+				<a class="button" @click.navtive="handleOpen"></a>
+				<mixc-password v-show="passwordVisible" @close="passwordVisible = false" @setting="settingVisible = true"></mixc-password>
+				<mixc-setting v-show="settingVisible" @close="settingVisible = false"></mixc-setting>
+			</div>
+		</script>	
+		<!-- 9.config: 左上角设置开始结束 -->	
+		
+		<!-- 10.setting: 设置开始 -->
+		<script type="text/x-template" id="setting-template">
+			<mixc-modal @close="$emit('close')" class="setting">
+			    <h3 slot="header">服务器设置</h3>
+			    <div slot="body">
+			    		<form>
+			    			<div class="form-row">
+							<div class="form-label">服务器IP</div>
+							<input v-model="formData.server" class="form-input" placeholder="请输入服务器的IP地址" ma/>
+						</div>
+						<div class="form-row">
+							<div class="form-label">服务器端口号</div>
+							<input v-model="formData.port" class="form-input" type="number" placeholder="请输入服务器的端口号" maxlength="5"/>
+						</div>
+						<div class="form-row">
+							<div class="form-label">版本源ID</div>
+							<input v-model="formData.sourceId" class="form-input" type="number" placeholder="请输入客户端版本源ID" maxlength="5"/>
+						</div>
+			    		</form>
+			    </div>
+			    <div slot="footer" class="form-row">
+			    		<button class="modal-default-button" @click="handleSubmit">保存</button>
+			    </div>
+		  	</mixc-modal>
+		</script>	
+		<!-- 10.modal: 设置结束 -->
+		
 		<script src="lib/vue/vue.js"></script>
 		<script src="lib/vue-router/vue-router.min.js"></script>
 		<script src="lib/swiper/swiper.min.js"></script>
 		<script src="lib/jquery/jquery-3.1.1.min.js"></script>
 		<script src="js/main.js"></script>
-		<script src="js/setting.js"></script>
 		<script src="js/ads.js"></script>
-		<script src="js/setting.js"></script>
+		<script src="lib/layer/layer.js"></script>
 	</body>
 
 </html>
