--- a/code/client/mixc_0.0.1/index.html
+++ b/code/client/mixc_0.0.1/index.html
@@ -358,8 +358,8 @@
 			<mixc-modal @close="$emit('close')" class="setting">
 			    <h3 slot="header">服务器设置</h3>
 			    <div slot="body">
-			    		<form>
-			    			<div class="form-row">
+		    		<form>
+		    			<div class="form-row">
 							<div class="form-label">服务器IP</div>
 							<input v-model="formData.server" class="form-input" placeholder="请输入服务器的IP地址" ma/>
 						</div>
@@ -371,7 +371,13 @@
 							<div class="form-label">版本源ID</div>
 							<input v-model="formData.sourceId" class="form-input" type="number" placeholder="请输入客户端版本源ID" maxlength="5"/>
 						</div>
-			    		</form>
+		    		</form>
+		    		<div style="font-size: 12px;">
+		    			当前版本: {{ formData.version }}
+		    		</div>
+		    		<div style="font-size: 12px;">
+		    			更新时间：{{ new Date(formData.updateTime).toLocaleString() }}
+		    		</div>
 			    </div>
 			    <div slot="footer" class="form-row">
 			    		<button class="modal-default-button" @click="handleSubmit">保存</button>
@@ -384,6 +390,7 @@
 		<script src="lib/vue-router/vue-router.min.js"></script>
 		<script src="lib/swiper/swiper.min.js"></script>
 		<script src="lib/jquery/jquery-3.1.1.min.js"></script>
+		<script src="js/app.js"></script>
 		<script src="js/main.js"></script>
 		<script src="js/ads.js"></script>
 		<script src="lib/layer/layer.js"></script>
