--- a/code/client/start.html
+++ b/code/client/start.html
@@ -174,6 +174,8 @@
 				}
 				const { remote, ipcRenderer}  = require('electron')
 				const startWindow = remote.getCurrentWindow()
+				localStorage.setItem('dirname', path.join(__dirname, 'js/checkversion.js'))
+				localStorage.setItem('checkversion', path.join(__dirname, 'js/checkversion.js'))
 				ipcRenderer.send('open-main')
 			}, true, (state) => {
 				switch(state) {
