完成C#客户端的改造

--- a/code/h5/index.html
+++ b/code/h5/index.html
@@ -56,73 +56,74 @@
 		<script src="src/assets/js/jquery.ext.js"></script>
 		<script src="src/assets/js/util.js"></script>
 		<script src="src/assets/js/proxy.js"></script>
+		<script src="src/assets/js/ads.js"></script>
 
 		<!-- 1 index: 首页模版－开始 -->
 		<!-- 1.1 index: 首页模版 -->
-		<script type="text/javascript" src="src/components/index/index.js"></script>
+		<script src="src/components/index/index.js"></script>
 
 		<!-- 1.2 ads: 顶部广告 -->
-		<script type="text/javascript" src="src/components/index/ads.js"></script>
+		<script src="src/components/index/ads.js"></script>
 			
 		<!-- 1.3 nav: 首页导航 -->
-		<script type="text/javascript" src="src/components/index/nav.js"></script>
+		<script src="src/components/index/nav.js"></script>
 		
 		<!-- 1.4 widget: 首页小部件 -->
-		<script type="text/javascript" src="src/components/index/widget.js"></script>
+		<script src="src/components/index/widget.js"></script>
 		
 		<!-- 1.5 category: 分类导航 -->
-		<script type="text/javascript" src="src/components/index/category.js"></script>
+		<script src="src/components/index/category.js"></script>
 		<!-- 1 index: 首页模版－结束 -->
 		
 		<!-- 2 public: 通用模块-开始-->
 		<!-- 2.1 header: 通用题头-->
-		<script type="text/javascript" src="src/components/public/header.js"></script>
+		<script src="src/components/public/header.js"></script>
 		
 		<!-- 2.2 modal: 模态窗口 -->
-		<script type="text/javascript" src="src/components/public/modal.js"></script>
+		<script src="src/components/public/modal.js"></script>
 		<!-- 2 public: 通用模块-结束-->
 		
 		<!-- 3.Brand: 品牌导购-开始 -->
 		<!-- 3.1 Brand: 品牌导购 -->
-		<script type="text/javascript" src="src/components/brand/index.js"></script>
+		<script src="src/components/brand/index.js"></script>
 			
 		<!-- 3.2 Table: 列表 -->
-		<script type="text/javascript" src="src/components/brand/table.js"></script>
+		<script src="src/components/brand/table.js"></script>
 		<!-- 3.Brand: 品牌导购-结束 -->
 			
 		<!-- 4 Shop: 商铺详情-开始 -->
-		<script type="text/javascript" src="src/components/shop/index.js"></script>
+		<script src="src/components/shop/index.js"></script>
 		<!-- 4 Shop: 商铺详情-结束 -->
 		
 		<!-- 5.Floor: 楼层导购-开始 -->
-		<script type="text/javascript" src="src/components/floor/index.js"></script>
+		<script src="src/components/floor/index.js"></script>
 		<!-- 5.Floor: 楼层导购-结束 -->
 		
 		<!-- 6.Info: 信息介绍-开始 -->
-		<script type="text/javascript" src="src/components/info/index.js"></script>
+		<script src="src/components/info/index.js"></script>
 		<!-- 6.Info: 信息介绍-结束 -->
 		
 		<!-- 7.article: 文章系统-开始 -->
-		<script type="text/javascript" src="src/components/article/index.js"></script>
+		<script src="src/components/article/index.js"></script>
 		<!-- 7.article: 文章系统-结束 -->
 		
 		<!-- 8.Activity: 活动-开始 -->
-		<script type="text/javascript" src="src/components/activity/index.js"></script>
+		<script src="src/components/activity/index.js"></script>
 		<!-- 8.Activity: 活动-结束 -->
 		
 		<!-- 9.setting: 设置开始 -->
 		<!-- 9.1 index: 设置窗口-->
-		<script type="text/javascript" src="src/components/setting/index.js"></script>
+		<script src="src/components/setting/index.js"></script>
 		
 		<!-- 9.2.config: 左上角 -->
-		<script type="text/javascript" src="src/components/setting/config.js"></script>
+		<script src="src/components/setting/config.js"></script>
 		
 		<!-- 9.2.config: 密码 -->
-		<script type="text/javascript" src="src/components/setting/password.js"></script>
+		<script src="src/components/setting/password.js"></script>
 		<!-- 9.setting: 设置结束 -->
 		
-		<script type="text/javascript" src="src/router.config.js"></script>
-		<script type="text/javascript" src="src/vuex/store.js"></script>
-		<script type="text/javascript" src="src/main.js"></script>
+		<script src="src/router.config.js"></script>
+		<script src="src/vuex/store.js"></script>
+		<script src="src/main.js"></script>
 	</body>
 </html>
