--- a/code/h5/index.html
+++ b/code/h5/index.html
@@ -49,10 +49,12 @@
 		
 		<script src="static/libs/vue/vue.js"></script>
 		<script src="static/libs/vuex/vuex.js"></script>
+		<script src="static/libs/vue-bus/index.js"></script>
 		<script src="static/libs/vue-router/vue-router.min.js"></script>
 		<script src="static/libs/swiper/swiper.min.js"></script>
 		<script src="static/libs/jquery/jquery-3.1.1.min.js"></script>
 		<script src="static/libs/layer/layer.js"></script>
+		<script src="static/libs/fabric/fabric.js"></script>
 		<script src="src/assets/js/jquery.ext.js"></script>
 		<script src="src/assets/js/util.js"></script>
 		<script src="src/assets/js/proxy.js"></script>
